--- a/app/src/main/res/layout/activity_login_forgot_password.xml
+++ b/app/src/main/res/layout/activity_login_forgot_password.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_forgotpopup" />
 
     <Button
-        android:id="@+id/btn_forgotpopup"
+        android:id="@+id/btn_send_email"
         android:layout_width="146dp"
         android:layout_height="70dp"
         android:background="@drawable/bnt_login"
