--- a/app/src/main/res/layout/activity_login_forgot_password.xml
+++ b/app/src/main/res/layout/activity_login_forgot_password.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/txt_email"
+        android:id="@+id/txt_email_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_email"
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_signup"
         app:layout_constraintVertical_bias="0.333" />
 
     <Button
