Layout fixes - Added top bar layout in 2 colors - Added top bar to home layout - Fixed login background colors - Fixed main app colors

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <include
-        layout="@layout/layout_toolbar"
+        layout="@layout/layout_toolbar_secondary"
         android:id="@+id/toolbar" />
 
     <Button
