--- a/app/src/main/res/layout/layout_toolbar_secondary.xml
+++ b/app/src/main/res/layout/layout_toolbar_secondary.xml
@@ -6,7 +6,7 @@
     android:layout_height="60dp"
     app:contentInsetStart="0dp"
     app:contentInsetEnd="0dp"
-    android:theme="@style/HeaderBar">
+    android:theme="@style/header_black_bar">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,22 +15,27 @@
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="37dp"
+            android:layout_height="38dp"
+            android:tint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:drawable/ic_popup_reminder" />
+            app:srcCompat="@drawable/baseline_notifications_24"
+            app:tintMode="src_in" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:fontFamily="cursive"
             android:text="@string/app_name"
+            android:textColor="@color/white"
             android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,6 +58,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:text="TextView"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/profile_image"
             app:layout_constraintTop_toTopOf="parent"
