--- a/app/src/main/res/drawable/bg_login.xml
+++ b/app/src/main/res/drawable/bg_login.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:centerColor="#854B90E4"
-        android:endColor="#403F46C5"
-        android:startColor="#FD4B95E4"
+        android:endColor="@color/colorPrimary"
+        android:startColor="#007C70"
         />
 </shape>
