--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#0437d1</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#03DAC5</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#9F9F9F</color>
     <color name="white">#FFFFFF</color>
 </resources>
