--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -26,11 +26,12 @@
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.617"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/title_text"
         android:layout_width="345dp"
         android:layout_height="39dp"
         android:layout_marginTop="20dp"
@@ -46,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/viewTextCreate" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/where_text"
         android:layout_width="349dp"
         android:layout_height="37dp"
         android:layout_marginTop="24dp"
@@ -59,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
     <Button
         android:id="@+id/button_day"
@@ -72,7 +73,7 @@
         app:layout_constraintEnd_toStartOf="@+id/button_hour"
         app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/where_text" />
 
     <Button
         android:id="@+id/button_hour"
@@ -85,10 +86,10 @@
         android:textColor="@drawable/btn_letr"
         android:text="@string/button_select_hour"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/where_text" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/description_text"
         android:layout_width="338dp"
         android:layout_height="79dp"
         android:layout_marginTop="20dp"
@@ -103,66 +104,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_day" />
 
-    <EditText
-        android:id="@+id/editText4"
-        android:layout_width="341dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:autofillHints=""
-        android:inputType="textPersonName"
-        android:text="@string/what_bring_text"
-        android:hint="@string/what_bring_text"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.385"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
-
-    <EditText
-        android:id="@+id/editText5"
-        android:layout_width="340dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:autofillHints=""
-        android:inputType="textPersonName"
-        android:text="@string/much_cost"
-        android:hint="@string/much_cost"
-        android:textSize="17sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.422"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
-
     <Button
         android:id="@+id/button_image"
         android:layout_width="140dp"
         android:layout_height="66dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="48dp"
-        android:text="@string/button_add_image"
-        android:textSize="17sp"
+        android:layout_marginStart="224dp"
+        android:layout_marginLeft="224dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/btn_event_bottom"
+        android:text="@string/button_add_image"
         android:textColor="@drawable/btn_letr"
-        app:layout_constraintEnd_toStartOf="@+id/button_create"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText5" />
+        android:textSize="17sp"
+        app:layout_constraintStart_toStartOf="@+id/image_selector"
+        app:layout_constraintTop_toBottomOf="@+id/description_text" />
 
     <Button
         android:id="@+id/button_create"
         android:layout_width="140dp"
         android:layout_height="66dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginRight="44dp"
-        android:text="@string/button_add_event"
+        android:layout_marginTop="36dp"
         android:background="@drawable/btn_event_bottom"
-        android:textSize="17sp"
+        android:text="@string/button_add_event"
         android:textColor="@drawable/btn_letr"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText5" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_selector"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/image_selector"
+        android:layout_width="208dp"
+        android:layout_height="149dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.147"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description_text"
+        android:contentDescription="@string/description_text"
+        app:srcCompat="@drawable/event_add" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
