--- a/app/src/main/res/layout/layout_toolbar_secondary_profile.xml
+++ b/app/src/main/res/layout/layout_toolbar_secondary_profile.xml
@@ -6,18 +6,19 @@
     android:layout_height="60dp"
     app:contentInsetStart="0dp"
     app:contentInsetEnd="0dp"
-    android:theme="@style/header_green_bar">
+    android:theme="@style/header_black_bar">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/layout_border"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
+        android:layout_height="match_parent"
+        android:background="#5BEF9E">
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="37dp"
             android:layout_height="38dp"
+            android:background="#5BEF9E"
             android:tint="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -27,47 +28,40 @@
             app:tintMode="src_in" />
 
         <TextView
-            android:id="@+id/appName"
+            android:id="@+id/size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginLeft="15dp"
+            android:background="#5BEF9E"
             android:fontFamily="cursive"
             android:text="@string/app_name"
-            android:textColor="@android:color/black"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:src="@mipmap/ic_launcher"
-            app:border_color="#000000"
-            app:border_width="0.5dp"
+        <TextView
+            android:id="@+id/txt_edit"
+            android:layout_width="91dp"
+            android:layout_height="39dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:background="#5BEF9E"
+            android:fontFamily="cursive"
+            android:gravity="center"
+            android:text="Edit"
+            android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/txt_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:text="TextView"
-            android:textColor="@android:color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/profile_image"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.512" />
+            app:layout_constraintVertical_bias="0.407" />
 
         <TextView
+            android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="top|end"
@@ -81,5 +75,6 @@
             app:layout_constraintStart_toStartOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="@+id/imageView4"
             app:layout_constraintVertical_bias="0.0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.appcompat.widget.Toolbar>
