--- a/app/src/main/res/layout/layout_toolbar_secondary.xml
+++ b/app/src/main/res/layout/layout_toolbar_secondary.xml
@@ -52,7 +52,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/profileName"
+            android:id="@+id/txt_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
