--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -10,15 +10,15 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/layout_toolbar_secondary"
-        android:layout_width="412dp"
-        android:layout_height="56dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="-1dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/viewTextCreate"
-        android:layout_width="223dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="cursive"
         android:text="@string/create_event_text"
@@ -26,7 +26,6 @@
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.617"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
