--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -10,23 +10,22 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/layout_toolbar_secondary"
-        android:layout_width="412dp"
-        android:layout_height="56dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="-1dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/viewTextCreate"
-        android:layout_width="223dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:fontFamily="cursive"
         android:text="@string/edit_event_text"
         android:textColor="#000000"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
@@ -124,7 +123,7 @@
         android:layout_height="66dp"
         android:layout_marginTop="36dp"
         android:background="@drawable/btn_event_bottom"
-        android:text="@string/button_add_event"
+        android:text="@string/button_edit_event"
         android:textColor="@drawable/btn_letr"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
