--- a/app/src/main/res/layout/layout_toolbar_primary.xml
+++ b/app/src/main/res/layout/layout_toolbar_primary.xml
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/txt_name"
+            android:id="@+id/txt_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
