--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#9F9F9F</color>
     <color name="white">#FFFFFF</color>
+    <color name="yellow">#FFF735</color>
+    <color name="pink">#f20aee</color>
+    <color name="blue">#0a12f2</color>
+    <color name="orange">#f29d0a</color>
 </resources>
