--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="pink">#f20aee</color>
     <color name="blue">#0a12f2</color>
     <color name="orange">#f29d0a</color>
+    <color name="green">#14db60</color>
+    <color name="purple">#7e14db</color>
 </resources>
