Functional - Added create event toolbar functionalities - Adedd edit event toolbar functionalities Layout - Removed logout button - Fixed some bugs

--- a/app/src/main/res/layout/activity_edit_event.xml
+++ b/app/src/main/res/layout/activity_edit_event.xml
@@ -118,7 +118,7 @@
         app:layout_constraintTop_toBottomOf="@+id/description_text" />
 
     <Button
-        android:id="@+id/button_create"
+        android:id="@+id/edit_event_activity_edit_event_button"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_event_button"
